syntax = "proto3";
package protos;
//https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/%7Busername%7D/%7Brepo_slug%7D/diffstat/%7Bspec%7D
enum DiffType {
    added = 0;
    removed = 1;
    modified = 2;
    renamed = 3;
}

message Diffstat {
    message ChangedFile {
        string path = 1;
        string type = 2;
    }
    string type = 1;
    DiffType status = 2;
    ChangedFile old = 3;
    ChangedFile new = 4;
}

message FullDiff {
    int32 pagelen = 1;
    double page = 2;
    string next = 3;
    double size = 4;
    repeated Diffstat values = 5;
}